# quickerNES

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
source/: controller.hpp  emuInstance.hpp  emuInstanceBase.hpp  inputParser.hpp  logger.hpp  meson.build  nesInstanceBase.hpp  playbackInstance.hpp  player.cpp  tester.cpp  utils.hpp
source/core/: Data_Reader.cpp  Data_Reader.h  Nes_Apu.h  Nes_Buffer.cpp  Nes_Buffer.h  Nes_Core.cpp  Nes_Core.h  Nes_Cpu.cpp  Nes_Cpu.h  Nes_Emu.cpp  Nes_Emu.h  Nes_Fme7_Apu.cpp  Nes_Fme7_Apu.h  Nes_Mapper.cpp  Nes_Mapper.h  Nes_Namco_Apu.h  Nes_Ppu.cpp  Nes_Ppu_Impl.cpp  Nes_Ppu_Impl.h  Nes_Ppu_Rendering.cpp  Nes_Ppu_Sprites.h  Nes_Vrc7.h  abstract_file.cpp  abstract_file.h  apu_state.h  blargg_common.h  blargg_config.h  blargg_endian.h  blargg_source.h  meson.build  nes_cpu_io.h  nes_data.cpp  nes_data.h  nes_ntsc.h  nes_ntsc_impl.h
source/core/mappers/: mapper002.hpp
source/quickNES/: Mapper_70.cpp  emuInstance.hpp  meson.build  nesInstance.hpp  quickNESInstance.hpp
source/quickerNES/: Data_Reader.cpp  Effects_Buffer.cpp  Multi_Buffer.cpp  Nes_Apu.cpp  Nes_Apu.h  Nes_Buffer.cpp  Nes_Cart.cpp  Nes_Cart.h  Nes_Cart.hpp  Nes_Core.cpp  Nes_Core.h  Nes_Core.hpp  Nes_Cpu.cpp  Nes_Cpu.h  Nes_Cpu.hpp  Nes_Effects_Buffer.cpp  Nes_Emu.cpp  Nes_Emu.h  Nes_Emu.hpp  Nes_File.cpp  Nes_Fme7_Apu.cpp  Nes_Mapper.cpp  Nes_Mapper.h  Nes_Namco_Apu.cpp  Nes_Namco_Apu.h  Nes_Oscs.cpp  Nes_Ppu.cpp  Nes_Ppu.h  Nes_Ppu_Impl.cpp  Nes_Ppu_Impl.h  Nes_Ppu_Rendering.cpp  Nes_Ppu_Rendering.h  Nes_Ppu_Sprites.h  Nes_State.cpp  Nes_State.h  Nes_Vrc6_Apu.cpp  abstract_file.h  blargg_common.h  blargg_endian.h  blargg_source.h  (+10 more)
source/quickerNES/apu/: Blip_Buffer.cpp  Blip_Buffer.hpp  Effects_Buffer.cpp  Effects_Buffer.hpp  Multi_Buffer.cpp  Multi_Buffer.h  Multi_Buffer.hpp  NESEffectsBuffer.cpp  Nes_Buffer.cpp  Nes_Buffer.hpp  Nes_Effects_Buffer.cpp  Nes_Effects_Buffer.hpp  Nes_Oscs.cpp  Nes_Oscs.hpp  apu.cpp  apu.h  apu.hpp  buffer.hpp  effectsBuffer.cpp  effectsBuffer.hpp  multiBuffer.cpp  multiBuffer.hpp  oscs.cpp  oscs.hpp
source/quickerNES/audio/: Effects_Buffer.cpp  Nes_Buffer.cpp  Nes_Buffer.h  Nes_Effects_Buffer.cpp  Nes_Oscs.cpp  Nes_Oscs.h  apu.cpp  apu.h  meson.build
source/quickerNES/core/: cart.hpp  core.hpp  cpu.cpp  cpu.hpp  cpuFlat.cpp  cpuPaged.cpp  emu.cpp  emu.hpp
source/quickerNES/mappers/: mapper.cpp  mapper.h  mapper.hpp  mapper000.hpp  mapper001.hpp  mapper002.hpp  mapper003.hpp  mapper004.hpp  mapper005.hpp  mapper007.hpp  mapper009.hpp  mapper010.hpp  mapper011.hpp  mapper015.hpp  mapper019.hpp  mapper021.hpp  mapper022.hpp  mapper023.hpp  mapper024.hpp  mapper025.hpp  mapper026.hpp  mapper030.hpp  mapper032.hpp  mapper033.hpp  mapper034.hpp  mapper060.hpp  mapper066.hpp  mapper069.hpp  mapper070.hpp  mapper071.hpp  mapper073.hpp  mapper075.hpp  mapper078.hpp  mapper079.hpp  mapper085.hpp  mapper086.hpp  mapper087.hpp  mapper088.hpp  mapper089.hpp  mapper093.hpp  (+18 more)
source/quickerNES/ppu/: Nes_Ppu.cpp  Nes_Ppu.hpp  Nes_Ppu_Impl.cpp  Nes_Ppu_Impl.h  Nes_Ppu_Impl.hpp  Nes_Ppu_Rendering.cpp  Nes_Ppu_Rendering.hpp  ppu.cpp  ppu.hpp  ppuImpl.hpp  ppuRendering.cpp
tests/: .gitignore  README.md  arkanoid.arkNESController.test  arkanoid.warpless.test  arkanoid.warps.test  castlevania1.anyPercent.test  castlevania1.pacifist.test  endingChecker.cpp  galaga.anyPercent.test  gimmick.anyPercent.sol  gimmick.anyPercent.test  ironSword.anyPercent.test  meson.build  metroid.playaround.sol  metroid.playaround.test  microMachines.race20.test  nigelMansell.anyPercent.test  ninjaGaiden.anyPercent.test  ninjaGaiden.pacifist.test  ninjaGaiden2.anyPercent.test  ninjaGaiden2.pacifist.test  novaTheSquirrel.anyPercent.test  princeOfPersia.anyPercent.test  rcProAmII.anyPercent.sol  rcProAmII.anyPercent.test  rcProAmII.race1.test  run_benchmark.sh  run_test.sh  saintSeiyaKanketsuHen.anyPercent.test  saintSeiyaOugonDensetsu.anyPercent.test  saiyuukiWorld.anyPercent.test  saiyuukiWorld.lastHalf.sol  saiyuukiWorld.lastHalf.state  saiyuukiWorld.lastHalf.test  solarJetman.anyPercent.test  sprilo.anyPercent.test  superMarioBros.warpless.test  superMarioBros.warps.test  superMarioBros3.warps.test  superOffroad.anyPercent.sol  (+2 more)
tests/arkanoid/: meson.build  warpless.test  warps.test
tests/castlevania1/: anyPercent.test  meson.build  pacifist.test
tests/galaga/: anyPercent.test  meson.build
tests/games/: benchmark.2024.01.14.txt  benchmark0.txt  meson.build  run_benchmark.sh  run_test.sh
tests/games/arkanoid/: meson.build  warpless.final.state  warpless.sol  warpless.test  warps.final.state  warps.test
tests/games/castlevania1/: anyPercent.final.state  anyPercent.test  meson.build  pacifist.final.state  pacifist.test
tests/games/galaga/: anyPercent.final.state  anyPercent.test  meson.build
tests/games/ironSword/: anyPercent.final.state  anyPercent.test  meson.build
tests/games/nigelMansell/: anyPercent.final.state  anyPercent.test  meson.build
tests/games/ninjaGaiden/: anyPercent.final.state  anyPercent.test  meson.build  pacifist.final.state  pacifist.test
tests/games/tennis/: meson.build  (+3 more)
tests/ironSword/: anyPercent.test  meson.build
tests/metroid/: meson.build  playaround.test
tests/nigelMansell/: anyPercent.test  meson.build
tests/ninjaGaiden/: anyPercent.test  meson.build  pacifist.test
tests/ninjaGaiden2/: anyPercent.test  meson.build  pacifist.test
tests/novaTheSquirrel/: README.md  anyPercent.test  meson.build
tests/princeOfPersia/: anyPercent.test  meson.build
tests/roms/: .gitignore  sprilo.nes
tests/saintSeiyaKanketsuHen/: anyPercent.test  meson.build
tests/saintSeiyaOugonDensetsu/: anyPercent.test  meson.build
tests/saiyuukiWorld/: anyPercent.test  lastHalf.test  meson.build
tests/solarJetman/: anyPercent.test  meson.build
tests/sprilo/: README.md  anyPercent.test  meson.build
tests/superMarioBros/: README.md  meson.build  warpless.test  warps.sol  warps.test
tests/superMarioBros3/: meson.build  warps.test
tests/superOffroad/: anyPercent.test  meson.build
tests/tennis/: anyPercent.test  meson.build
(+154 files in other folders)
