option('buildPlayer',
  type : 'boolean',
  value : false,
  description : 'Build playback tool',
  yield: true
)

option('onlyOpenSource',
  type : 'boolean',
  value : false,
  description : 'Test using only open source games (for cloud CI)',
  yield: true
)

option('CPUFunctionAlignment',
  type : 'integer',
  min : 1,
  value : 1024,
  description : '''Indicates the alignment for the main emulator CPU function.
                 This is a large function that may cross page boundaries, which impacts performance. 
                 This requires the GNU compiler to work.'''
)