# quickerNES Audio sources

quickerNESAudioSrc = [
 'audio/apu.cpp', 
 'audio/Nes_Oscs.cpp', 
 'audio/Nes_Buffer.cpp', 
 'audio/Blip_Buffer.cpp', 
 'audio/Effects_Buffer.cpp', 
 'audio/Nes_Effects_Buffer.cpp', 
 'audio/Multi_Buffer.cpp',
 'audio/namco/apu.cpp', 
 'audio/vrc6/apu.cpp', 
 'audio/vrc7/emu2413.cpp', 
 'audio/vrc7/emu2413_state.cpp', 
 'audio/vrc7/apu.cpp',
 'audio/fme7/apu.cpp', 
]
